--- a/genmedhtml-100/Genmed HTML5/assets/css/style.css
+++ b/genmedhtml-100/Genmed HTML5/assets/css/style.css
@@ -1460,7 +1460,7 @@ label.custom-checkbox .checkmark:after {
 ========================*/
 
 .slider {
-    background-image: url(https://via.placeholder.com/1920x800);
+    background-image: url('../images/5814.jpg');
     height: 800px;
 }
 .slider .banner-slider .banner-text {
